refactor : 수정이 없는 list들을 불변리스트를 만들어주는 메서드인 toList 로 변경하였어요