@@ -12,7 +12,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @UseCase
@@ -39,6 +38,6 @@ public class QueryAllFormUseCase {
 
         return formList.stream()
                 .map(FormSimpleResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
